network/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rriv
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - auth.rriv.org
      secretName: rriv-cert-secret
  rules:
    - host: auth.rriv.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
